src/test/ui/editions/edition-raw-pointer-method-2015.stderr
error: type annotations needed
  --> $DIR/edition-raw-pointer-method-2015.rs:9:15
   |
LL |     let _ = y.is_null();
   |               ^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/edition-raw-pointer-method-2015.rs:5:8
   |
LL | #[deny(warnings)]
   |        ^^^^^^^^
   = note: `#[deny(tyvar_behind_raw_pointer)]` implied by `#[deny(warnings)]`
   = warning: this is valid in the current edition (Rust 2015) but is not accepted in the Rust 2018 edition!
   = note: for more information, see issue #46906 <https://github.com/rust-lang/rust/issues/46906>

error: aborting due to previous error

